[package]
name = "solend-liquidator-benchmarking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.1", features = ["full"] }

[dev-dependencies]
criterion = "0.3"
solend-liquidator = { path = "../solend-liquidator" }

[[bench]]
name = "liquidate"
harness = false