[package]
name = "solend-liquidator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
libp2p = "0.45.0"
async-trait = "0.1.51"
tokio = { version = "1.14.1", features = ["full"] }
futures-retry = "0.6.0"
clap = { version = "3.0.13", features = ["derive"] }
either = "1.6.1"
bigdecimal = "0.3.0"
secp256k1 = "0.21"
hex-literal = "0.3.4"
hyper = { version = "0.14.17", features = ["full"] }
hyper-tls = "0.5.0"
http = "0.2.6"
bytes = "1.1.0"
thiserror = "1.0.30"
web3 = "0.18.0"
criterion = "0.3.5"
futures = "0.3.21"
lazy_static = "1.4.0"
parking_lot = "0.12.0"
base64 = "0.13.0"
evmap = "10.0.2"
rocksdb = "0.16.0"
rand = "0.8.5"
libsecp256k1 = "0.7.0"
sha3 = "^0.10.1"
spl-associated-token-account = "1.0.5"
sodiumoxide = "0.2.7"
zeroize = "1.0.0"
rand_core = "0.6.3"
k256 = "0.10"
hex = "0.4.3"
serde = "1.0.136"
serde_json = "1.0.78"
serde_derive = "1.0.136"
solana-clap-utils = "=1.10.26"
solana-cli-config = "=1.10.26"
solana-client = "=1.10.26"
solana-logger = "=1.10.26"
solana-sdk = "=1.10.26"
solana-program = "=1.10.26"
solana-account-decoder = "=1.10.26"
spl-token = "=3.3.0"
borsh = "0.9.3"
pyth-sdk-solana = "0.4.1"
bs58 = "0.4.0"
uint = "=0.9.0"
solend-program = { path = "../solana-program-library/token-lending/program" }