[package]
name = "solend-liquidator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.14.1", features = ["full"] }
clap = { version = "3.0.13", features = ["derive"] }
hyper = { version = "0.14.17", features = ["full"] }
hyper-tls = "0.5.0"
http = "0.2.6"
bytes = "1.1.0"
thiserror = "1.0.30"
futures = "0.3.21"
lazy_static = "1.4.0"
base64 = "0.13.0"
spl-associated-token-account = "1.0.5"
serde = "1.0.136"
serde_json = "1.0.78"
serde_derive = "1.0.136"
solana-client = "=1.10.26"
solana-sdk = "=1.10.26"
solana-program = "=1.10.26"
solana-account-decoder = "=1.10.26"
solana-cli-config = "=1.10.26"
spl-token = "=3.3.0"
borsh = "0.9.3"
pyth-sdk-solana = "0.4.1"
uint = "=0.9.0"
solend-program = { path = "../solana-program-library/token-lending/program" }
switchboard-program = { path = "../overriden/switchboard-program-0.2.1" }
switchboard-v2 = { path = "../overriden/switchboard-v2-0.1.10" }
criterion = "0.3"


[dev-dependencies]
